Bug 438689 - While a KCM is focused, Ctrl + F focuses the sidebar's search field but typing doesn't input text
Summary: While a KCM is focused, Ctrl + F focuses the sidebar's search field but typin...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.22.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: usability
: 464374 488646 490739 503704 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-06-15 18:48 UTC by postix
Modified: 2025-06-04 13:18 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments
Screen recording (430.89 KB, video/x-matroska)
2021-06-15 18:54 UTC, postix
Details

Note You need to log in before you can comment on or make changes to this bug.
Description postix 2021-06-15 18:48:29 UTC
SUMMARY

In the quick settings page, press with the left mouse somewhere in the gray area in order to unfocus the search field in the upper left corner.
Then press Ctrl + F.

OBSERVED RESULT

Search field is focused, but one cannot type into it.


EXPECTED RESULT

Search field is focused and typing into it is possible.


Is this maybe even a Qt bug? If so, do you know if there's already a report?


SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20210613
KDE Plasma Version: 5.22.0
KDE Frameworks Version: 5.82.0
Qt Version: 5.15.2
Graphics Platform: X11

same on current Fedora 34.
Comment 1 postix 2021-06-15 18:54:49 UTC
Created attachment 139344 [details]
Screen recording

1) Click into the gray area and pressed Ctrl + F: Search field focused but typing into it does not work.

2) Click into the white pane: Search field keeps being focused but typing into it now does work.
Comment 2 Nate Graham 2021-06-16 16:48:39 UTC
Weird, confirmed. Reproduces on all QML-based KCMs, not just the landing page: the search field visually gains focus, but typing does nothing.
Comment 3 Jakob Petsovits 2023-02-12 19:17:27 UTC
I was going to file a separate bug about the search field not getting focused when the sidebar opens a subcategory of settings pages (e.g. "Appearance") and Ctrl+F doesn't focus the search field unless it's already visible. But looking closer, it seems as if this is probably the same issue.

Steps that work (almost) as expected:
1. Click "Appearance" and the "Global Theme" view opens on the right.
2. Make sure your window is narrow enough so you only see one sidebar column on the left (showing the "Appearance" tree of pages) and "Global Theme" on the right.
3. Type Ctrl+F. Nothing *seems* to happen, however the search field focuses clandestinely.
4. Type any letters. The sidebar slides back to the search field and finds pages.

Steps that do nothing:
1. Click "Appearance" and the "Global Theme" view opens on the right.
2. Make sure your window is narrow enough so you only see one sidebar column on the left (showing the "Appearance" tree of pages) and "Global Theme" on the right.
3. Click into the white space on the right.
4. Type Ctrl+F. Nothing happens.
5. Type any letters. Nothing continues to happen.

Both the original report and my experiment make it seem as if the search field has focus within the sidebar view - if the sidebar has focus, then typing in the search field will also work - but clicking into the main view of the opened KCM transfers focus away from the sidebar and Ctrl+F doesn't bring it back. I'm not versed enough in Qt/QML to hypothesize why the search field would grab focus for the field within the sidebar but not for the sidebar itself. That's where I'd start looking, though.
Comment 4 cwo 2024-07-24 17:33:50 UTC
*** Bug 490739 has been marked as a duplicate of this bug. ***
Comment 5 Martin Riethmayer 2024-10-23 06:33:07 UTC
Ctrl+F still doesn't work on up-to-date KDE Neon user edition: The search field gains focus (carret is blinking) but you can't enter text.
Comment 6 Bug Janitor Service 2025-05-29 14:21:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/systemsettings/-/merge_requests/363
Comment 7 Nate Graham 2025-05-29 14:38:23 UTC
*** Bug 503704 has been marked as a duplicate of this bug. ***
Comment 8 Nate Graham 2025-05-29 14:40:55 UTC
*** Bug 464374 has been marked as a duplicate of this bug. ***
Comment 9 Nate Graham 2025-05-29 14:40:59 UTC
*** Bug 488646 has been marked as a duplicate of this bug. ***
Comment 10 Marco Martin 2025-06-04 08:19:32 UTC
Git commit a8dd906a47bc1a221a3153714207369b7b6e6af5 by Marco Martin.
Committed on 04/06/2025 at 08:06.
Pushed by mart into branch 'master'.

Give the search field focus when Ctrl+F shortcut is pressed

The search field can have activeFocus, but the containing
QQuickWidget might not have focus.
When it gains activeFocus, ask the outher SideBarMode to
focus the proper QQuickWidget

M  +1    -1    app/SidebarMode.h
M  +5    -0    app/qml/CategoriesPage.qml

https://invent.kde.org/plasma/systemsettings/-/commit/a8dd906a47bc1a221a3153714207369b7b6e6af5
Comment 11 Marco Martin 2025-06-04 08:25:10 UTC
Git commit 437e9ab9771644a6bd69f7ae9599ec7522a1a428 by Marco Martin.
Committed on 04/06/2025 at 08:19.
Pushed by mart into branch 'Plasma/6.4'.

Give the search field focus when Ctrl+F shortcut is pressed

The search field can have activeFocus, but the containing
QQuickWidget might not have focus.
When it gains activeFocus, ask the outher SideBarMode to
focus the proper QQuickWidget


(cherry picked from commit a8dd906a47bc1a221a3153714207369b7b6e6af5)

a8dd906a Give the search field focus when Ctrl+F shortcut is pressed

Co-authored-by: Marco Martin <notmart@gmail.com>

M  +1    -1    app/SidebarMode.h
M  +5    -0    app/qml/CategoriesPage.qml

https://invent.kde.org/plasma/systemsettings/-/commit/437e9ab9771644a6bd69f7ae9599ec7522a1a428