Give the search field focus when Ctrl+F shortcut is pressed

The search field can have activeFocus, but the containing
QQuickWidget might not have focus.
When it gains activeFocus, ask the outher SideBarMode to
focus the proper QQuickWidget

BUG:438689